[package]
name = "tradescrow-substreams"
version = "0.0.1"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
ethabi = "17.0"
prost = "0.11"
prost-types = "0.11"
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
phf = { version = "0.11.1", features = ["macros"] }
substreams = "0.5"
substreams-ethereum = "0.9"
substreams-entity-change = "1.3"
tiny-keccak = "2.0"
log = "0.4.20"

[build-dependencies]
prost-build = "0.11"
anyhow = "1"
substreams-ethereum = "0.9"

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
